<resources>
    <string name="app_name">QuizGameKotlin</string>
    <string name="quizapp">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="default_question">Default Question</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="username">Username</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="result">Result</string>
    <string name="image">image</string>
</resources>