<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_result"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/result"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:id="@+id/img_trophy"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_baseline_grade_24"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_congratulations"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/hey_congratulations"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_name"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/username"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_score"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_finish"
        android:backgroundTint="@color/yellow"
        android:text="@string/finish"
        android:textColor="@color/black"
        android:textSize="18sp"/>

</LinearLayout>